# Stim_fork

./: .gitignore  README.md
GPU/: CMakeLists.txt  frame_simulator_base.h  frame_simulator_cpu.cpp  frame_simulator_gpu.cu  frame_simulator_gpu.cuh  frame_simulator_gpu.h  main.cpp  operation_batch.cuh
GPU_proof_of_concept/: .gitignore  CMakeLists.txt  README.md  benchmark  cuda_kernels.cu  cuda_kernels.cuh  debug_flags.cpp  debug_flags.cu  debug_flags.h  frame_simulator_base.h  frame_simulator_cpu.h  frame_simulator_gpu.cu  frame_simulator_gpu.h  main.cpp  operation_batch.cu  operation_batch.cuh  qec_benchmark  qec_benchmark.cpp  testing  testing.cpp
src/stim/simulators/: frame_simulator_GPU.h  frame_simulator_GPU.inl
